--- a/AdvancedChat/src/main/resources/config.yml
+++ b/AdvancedChat/src/main/resources/config.yml
@@ -15,7 +15,7 @@
 #
 Settings:
   
-  # |Config-Version| not touch
+  # |Config-Version| I would not change anything
   Config-Version: 1
   
   # |Debug| This option should only be used if there is a problem with certain functions of the plugin, debug messages will be activated in the console
@@ -35,9 +35,45 @@ Settings:
   
   # |Prefix| here you can define a custom prefix
   Prefix: '&6[&bMy Server&6]&7'
+
+  # |Show-Chat-In-Console| here you can enable or disable the chat to be seen in the console
+  Show-Chat-In-Console: false
   
-  # ![Disabled]!
-  #Custom-Commands: false
+  # |Default-Color-Message| Here you can define the chat color that is assigned by default to players
+    # The color system does not work with (&) but uses a simpler system that is by color names, here below you have the list of available colors
+    # Color List: https://jonagamerpro1234.gitbook.io/advancedchat/color-list
+  Default-Color-Message: 'white'
+#
+# | Hooks | Here are all the configurations of the plugin implementations and more
+Hooks:
+  
+  # |LuckPerms| Here you can configure everything related to LuckPerms and or deactivate or activate functions
+  LuckPerms:
+    
+    # |Enabled| Here you can enable or disable this feature
+    Enabled: true
+    
+    # |Use-Luckperms-In-Groups| When using this option, the groups are discovered with the LuckPerms system
+    Use-Luckperms-In-Groups: false
+  
+  # |Vault| Here you can configure everything related to Vault and or deactivate or activate functions
+  Vault:
+    
+    # |Enabled| Here you can enable or disable this feature
+    Enabled: true
+    
+    # |Use-Vault-In-Groups| When using this option, the groups are discovered with the Vault system
+    Use-Vault-In-Groups: true
+  
+  # |DiscordSRV| Here you can define the discord channel where the messages from minecraft to discord are seen
+  # !This characteristic is in the experimental phase!
+  DiscordSRV:
+
+    # |Enabled| Here you can enable or disable this feature
+    Enabled: true
+  
+    # |Channel-ID| Here is the id of the channel that is used for the chat
+    Channel-ID: 'none'
 #
 # | ClearChat |
 #
@@ -59,94 +95,85 @@ ClearChat:
   LineClear: 100
 #
 # | ChatFormat |
-#
+# | 
 ChatFormat:
 
   # |Enabled| Here you can enable or disable this feature
   Enabled: true
-
-  # |Default| 
-  Default:
   
-    # |Format|
-    Format: '&b<name> &8>'
-    
-    # |HoverEvent| This section allows you to modify the hover events in the chat
-    HoverEvent:
-    
-      # |Enabled| Here you can enable or disable this feature
-      Enabled: true
+  # |Type|
+    # [default] use default chat by minecraft 
+    # [normal] use the chat defined in [ChatFormat] 
+    # [group] use the chat defined in the group found inside the [groups.yml] file
+  Type: normal
   
-      # |Hover| This section allows you to define the hover text
-      Hover:
-        - '&6> &aHello &b<name>'
-        - '&6> &e%player_exp_to_level%'
-        - '&6> &dadd more lines like these'
-    # |ClickEvent| This section allows you to modify chat click events
-    ClickEvent:
+  # |Format| Here you define the chat format for all players.
+  Format: '&b<name> &8>'
+    
+  # |HoverEvent| This section allows you to modify the hover events in the chat
+  HoverEvent:
+    
+  # |Enabled| Here you can enable or disable this feature
+  Enabled: true
+  
+  # |Hover| This section allows you to define the hover text
+  Hover:
+    - '&6> &aHello &b<name>'
+    - '&6> &e%player_exp_to_level%'
+    - '&6> &dadd more lines like these'
+  # |ClickEvent| This section allows you to modify chat click events
+  ClickEvent:
      
-      # |Enabled| Here you can enable or disable this feature
-      Enabled: true
+    # |Enabled| Here you can enable or disable this feature
+    Enabled: true
     
-      # |Mode| there are three different modes which are [ Command | Suggest | Url ]
-      Mode: Command
+    # |Mode| there are three different modes which are [ command | suggest | url ]
+    Mode: command
     
-      # |Actions| This is where are the available events that you can use
-      Actions:
+    # |Actions| This is where are the available events that you can use
+    Actions:
       
-        # |Command| Clicking on the chat will execute the command defined in the config
-        Command: '/say <name> hello server'
+      # |Command| Clicking on the chat will execute the command defined in the config
+      Command: '/say <name> hello server'
       
-        # |Url| Clicking on the chat opens a link
-        Url: 'https://jonagamerpro1234.gitbook.io/advancedchat/'
+      # |Url| Clicking on the chat opens a link
+      Url: 'https://jonagamerpro1234.gitbook.io/advancedchat/'
       
-        # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
-        Suggest-Command: '/msg <name>'
+      # |Suggest-Command| Clicking on the chat suggests a command that you define in the config
+      Suggest-Command: '/msg <name>'  
+
   
-  # |Groups| 
-  Groups:
-    Default:
-      Permission: 'advancedchat.group.default'
-      Format:
-        Prefix: '<player>'
-        Message: '&8> &7<message>'
-      HoverEvent:
-        - ''
-        - ''
-        - ''
-  
-  Debug-Format: '<&f<player>&f> &f<message>'
+  # |Debug-Format| It is a chat that will be activated when the configuration contains an error
+  Debug-Format: '&b[&cError in Config&b] &f<&f<player>&f> &f<message>'
   
 #
 # | MySQL|
-# | MySql is a database where you can save plugin data remotely and it can be synchronized with other servers if you are using BungeeCord
-#
+# |MySql is a database where you can save plugin data remotely and it can be synchronized with other servers if you are using BungeeCord
 MySQL:
 
   # |Options|  
-  Options: "useSSL=false&autoReconnect=true"
+  Options: 'useSSL=false&autoReconnect=true'
   
   # |Table|
-  Table: "advancedchat_players"
+  Table: 'advancedchat_players'
   
   # |Host| this is where you should put the database host
-  Host: "localhost"
+  Host: 'localhost'
   
   # |Port| this is where you should put the database port
-  Port: "3306"
+  Port: '3306'
   
   # |Database| this is where you should put the name of the database
-  Database: "advancedchatDB"
+  Database: 'advancedchatDB'
   
   # |User| this is where you should put the database user name
-  Username: "root"
+  Username: 'root'
   
   # |Password| this is where you should put the database password
-  Password: "123456"
+  Password: '123456'
 #
-# |Command Blocker|
+# | Command Blocker |
 # |here you can block the commands that you do not want to be used on the server at the moment it does not have the function of [antitabcomplete]
-#
 Command-Blocker:
 
   # |Enabled| Here you can enable or disable this feature
@@ -183,7 +210,6 @@ Command-Blocker:
       - '/me'
       - '/say'
       - '/msg'
-
 #
 # |TabComplete|
 #
@@ -212,19 +238,22 @@ Filter-Chat:
 
    # |Enabled| Here you can enable or disable this feature
   Enabled: true
-
+  
+  #Removed 1.6
   # |Use-Custom-Msg| will use a custom message found in the [Message] section instead of using [Form Of Censorship] [Default | false]
   Use-Custom-Msg: false
 
   # |Message| here you can define a personalized message that will be sent to the player
   Message: '&eyou cannot use this word, it is blocked!'
 
+  #Removed 1.6
   # |Form-Of-Censorship| this is the format that the word will be censored, for example [noob = ****] this will depend on the number of characters that the word has
   Form-Of-Censorship: '*'
 
   # ![Disabled]! |Delay| It is the waiting time that the message will have before it is sent so that spam does not form in the player's chat [Defalt | 100 ]
   Delay: 5 #[Not Implement]
   
+  #Changed 1.6
   # |BadWords| The format is very simple, you just have to add the word you want to censor to the list
   BadWords:
     - 'noob'
