--- a/AdvancedChat/Api/pom.xml
+++ b/AdvancedChat/Api/pom.xml
@@ -6,4 +6,21 @@
     <version>1.6.0-Pre</version>
   </parent>
   <artifactId>advancedchat-api</artifactId>
+  
+    <repositories>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+  </repositories>
+  
+  <dependencies>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.17.1-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+  </dependencies>
+  
 </project>
