--- a/AdvancedChat/pom.xml
+++ b/AdvancedChat/pom.xml
@@ -40,8 +40,11 @@
 		<module>Bukkit</module>
 		<module>Api</module>
 		<module>Bungee</module>
-		<module>Shade</module>
+		
+		
+		<module>Common</module>
 	</modules>
+	
 	<dependencyManagement>
 	  <dependencies>
 		<dependency>
@@ -61,13 +64,14 @@
 		</dependency>	
 		<dependency>
 			<groupId>jss.advancedchat</groupId>
-			<artifactId>advancedchat-shade</artifactId>
+			<artifactId>advancedchat-common</artifactId>
 			<version>1.6.0-Pre</version>
 		</dependency>
 	</dependencies>
  </dependencyManagement>
 	
 	<build>
+	
 		<defaultGoal>clean package</defaultGoal>
 	
 		<pluginManagement>
@@ -108,32 +112,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
 					<version>3.0.0-M3</version>
-				</plugin>
-				
-				<!-- This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-antrun-plugin</artifactId>
-										<versionRange>[0.0,)</versionRange>
-										<goals>
-											<goal>run</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<execute />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
