--- a/AdvancedChat/Common/pom.xml
+++ b/AdvancedChat/Common/pom.xml
@@ -19,6 +19,10 @@
   </repositories>
   
   <dependencies>
+  		<dependency>
+  			<groupId>${project.groupId}</groupId>
+  			<artifactId>advancedchat-api</artifactId>
+  		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
