--- a/AdvancedChat/pom.xml
+++ b/AdvancedChat/pom.xml
@@ -72,7 +72,7 @@
 	
 	<build>
 	
-		<defaultGoal>clean package</defaultGoal>
+		<defaultGoal>clean install</defaultGoal>
 	
 		<pluginManagement>
 			<plugins>
