--- a/AdvancedChat/Bukkit/pom.xml
+++ b/AdvancedChat/Bukkit/pom.xml
@@ -3,70 +3,100 @@
   <parent>
     <groupId>jss.advancedchat</groupId>
     <artifactId>advancedchat-parent</artifactId>
-    <version>1.6.0-Pre</version>
+    <version>1.7.0</version>
   </parent>
   <artifactId>advancedchat-bukkit</artifactId>
 
 	<dependencies>
+	
+		<!-- Common -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>advancedchat-common</artifactId>
 		</dependency>
+		
+		<!-- Api -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>advancedchat-api</artifactId>
 		</dependency>
+		
+		<!-- HikariCP -->
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		
+		<!-- MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.16</version>
 		</dependency>
+		
+		<!-- Spigot -->
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
 			<version>1.17.1-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>net.md-5</groupId>
+					<artifactId>bungeecord-chat</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+		
+		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.20</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- PlaceholderAPI -->
 		<dependency>
 			<groupId>me.clip</groupId>
 			<artifactId>placeholderapi</artifactId>
 			<version>2.10.0</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- XSerie -->
 		<dependency>
 			<groupId>com.github.cryptomorin</groupId>
 			<artifactId>XSeries</artifactId>
 			<version>8.4.0</version>
 		</dependency>
+		
+		<!-- Mojang -->
 		<dependency>
 			<groupId>com.mojang</groupId>
 			<artifactId>authlib</artifactId>
 			<version>1.5.25</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- ProtocolLib -->
 		<dependency>
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib</artifactId>
 			<version>4.7.0</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- Vault -->
 		<dependency>
 			<groupId>com.github.MilkBowl</groupId>
 			<artifactId>VaultAPI</artifactId>
 			<version>1.7</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- BungeeCord -->
 		<dependency>
 			<groupId>net.md-5</groupId>
 			<artifactId>bungeecord-api</artifactId>
@@ -76,16 +106,21 @@
 		</dependency>
 		<dependency>
 			<groupId>net.md-5</groupId>
-			<artifactId>bungeecord-chat</artifactId>
+			<artifactId>bungeecord-api</artifactId>
 			<version>1.17-R0.1-SNAPSHOT</version>
+			<type>javadoc</type>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- LuckPerms -->
 		<dependency>
 			<groupId>net.luckperms</groupId>
 			<artifactId>api</artifactId>
 			<version>5.3</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- Holographic Displays -->
 		<dependency>
     		<groupId>com.gmail.filoghost.holographicdisplays</groupId>
     		<artifactId>holographicdisplays-api</artifactId>
