--- a/AdvancedChat/Bukkit/src/main/resources/config.yml
+++ b/AdvancedChat/Bukkit/src/main/resources/config.yml
@@ -1,17 +1,17 @@
-# |    AdvancedChat     |
-# | By jonagamerpro1234 |
-# |     Version 1.6.0   |
-# |_____________________|
-#
-# a simple plugin that helps you customize your server chat to make it look better also provides a customizable chat system by group or rank
-#
-# |Links|
-# -> Spigot: https://www.spigotmc.org/resources/advancedchat-1-7-x-1-17-x.83889/
-# -> Songoda: https://songoda.com/marketplace/product/advancedchat-chat-related.542
-# -> Wiki [Working Progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
-# -> Discord: https://discord.gg/c5GhQDQCK5
-# -> Issue Tracker: https://github.com/jonagamerpro1234/AdvancedChat/issues
-# -> Plugin Statistics: https://bstats.org/plugin/bukkit/AdvancedChat/8826
+#     ___   ______
+#    /   | / ____/ 
+#   / /| |/ /      By jonagamerpro1234
+#  / ___ / /___    Version 1.7.0
+# /_/  |_\____/    Thanks for using AdvancedChat <3
+#  
+# ● a simple plugin that helps you customize your server chat to make it look better also provides a customizable chat system by group or rank
+#  
+# ● Spigot: https://www.spigotmc.org/resources/advancedchat-1-7-x-1-17-x.83889/
+# ● Songoda: https://songoda.com/marketplace/product/advancedchat-chat-related.542
+# ● Wiki [Working Progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
+# ● Discord: https://discord.gg/c5GhQDQCK5
+# ● Issue Tracker: https://github.com/jonagamerpro1234/AdvancedChat/issues
+# ● Bstast: https://bstats.org/plugin/bukkit/AdvancedChat/8826
 #
 Settings:
   
@@ -315,7 +315,7 @@ Mention:
     Volume: 10
 #
 # |Translation of messages from AdvancedChat|
-# |Version: 1.6|
+# |Version: 1.7|
 #
 AdvancedChat:
   Depend-Plugin: '&cCannot enable packet features!, Required plugin missing:'
@@ -356,5 +356,5 @@ AdvancedChat:
 # This is the end of the configuration ... [-_-] more things coming soon
 # 
 # | Config File
-# | Version 1.6.0
+# | Version 1.7.0
 #
