--- a/AdvancedChat/Bungee/src/main/resources/bungee-config.yml
+++ b/AdvancedChat/Bungee/src/main/resources/bungee-config.yml
@@ -1,17 +1,23 @@
-# |    AdvancedChat     |
-# | By jonagamerpro1234 |
-# |     Version 1.7.0   |
-# |_____________________|
-#
+#     ___   ______
+#    /   | / ____/ 
+#   / /| |/ /      By jonagamerpro1234
+#  / ___ / /___    Version 1.7.5
+# /_/  |_\____/    Thanks for using AdvancedChat <3
+#  
+# ● a simple plugin that helps you customize your server chat to make it look better also provides a customizable chat system by group or rank
+#  
+# ● Spigot: https://www.spigotmc.org/resources/advancedchat-1-7-x-1-17-x.83889/
+# ● Songoda: https://songoda.com/marketplace/product/advancedchat-chat-related.542
+# ● Wiki [Working Progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
+# ● Discord: https://discord.gg/c5GhQDQCK5
+# ● Issue Tracker: https://github.com/jonagamerpro1234/AdvancedChat/issues
+# ● Bstast: https://bstats.org/plugin/bukkit/AdvancedChat/8826
 #
 # |Default-Channel|
-#
 # Types: [ALL] [Local] [Group] comming soon more options
-#
 Default-Channel: ALL
 #
 # |DataBase|
-#
 DataBase:
   Host: 'localhost'
   port: '3306'
@@ -20,7 +26,7 @@ DataBase:
   password: '1234'
 #
 # |Translation of messages from AdvancedChat|
-# |Version: 1.7.0|
+# |Version: 1.7.5|
 #
 AdvancedChat:
   Error-Sync-DataBase: ''
