--- a/AdvancedChat/pom.xml
+++ b/AdvancedChat/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>jss.advancedchat</groupId>
 	<artifactId>advancedchat-parent</artifactId>
-	<version>1.6.0-Pre</version>
+	<version>1.7.0</version>
 	<packaging>pom</packaging>
 
 	<name>AdvancedChat</name>
@@ -40,8 +40,6 @@
 		<module>Bukkit</module>
 		<module>Api</module>
 		<module>Bungee</module>
-		
-		
 		<module>Common</module>
 	</modules>
 	
