--- a/AdvancedChat/Bukkit/src/main/resources/gradient-gui.yml
+++ b/AdvancedChat/Bukkit/src/main/resources/gradient-gui.yml
@@ -1,7 +1,10 @@
-# |    AdvancedChat     |
-# | By jonagamerpro1234 |
-# |     Version 1.6.0   |
-# |_____________________|
+#     ___   ______
+#    /   | / ____/ 
+#   / /| |/ /      By jonagamerpro1234
+#  / ___ / /___    Version 1.7.0
+# /_/  |_\____/    Thanks for using AdvancedChat <3
+#  
+#
 Title: '&b&lMenu &8&l> &e&lGradient'
 Items:
   Last:
