--- a/AdvancedChat/Bungee/src/main/resources/bungee-config.yml
+++ b/AdvancedChat/Bungee/src/main/resources/bungee-config.yml
@@ -1,7 +1,7 @@
 #     ___   ______
 #    /   | / ____/ 
 #   / /| |/ /      By jonagamerpro1234
-#  / ___ / /___    Version 1.7.5
+#  / ___ / /___    Version 1.7.x
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #  
 # ● a simple plugin that helps you customize your server chat to make it look better also provides a customizable chat system by group or rank
@@ -41,5 +41,5 @@ AdvancedChat:
 # This is the end of the configuration ... [-_-] more things coming soon
 # 
 # | Config File
-# | Version 1.7.0
+# | Version 1.7.5
 #
