--- a/AdvancedChat/Bukkit/src/main/resources/badword.yml
+++ b/AdvancedChat/Bukkit/src/main/resources/badword.yml
@@ -1,11 +1,13 @@
-# |    AdvancedChat     |
-# | By jonagamerpro1234 |
-# |     Version 1.6.0   |
-# |_____________________|
-#
-#
+#     ___   ______
+#    /   | / ____/ 
+#   / /| |/ /      By jonagamerpro1234
+#  / ___ / /___    Version 1.7.0
+# /_/  |_\____/    Thanks for using AdvancedChat <3
+#  
 #
 Blacklist:
   - 'noob'
   - 'stupid'
-  - 'fuck' 
+  - 'fuck'
+  - 'n00b'
+  - 'fvck'
