--- a/AdvancedChat/Bukkit/src/main/resources/custom-command.yml
+++ b/AdvancedChat/Bukkit/src/main/resources/custom-command.yml
@@ -1,7 +1,9 @@
-# |    AdvancedChat     |
-# | By jonagamerpro1234 |
-# |     Version 1.6.0   |
-# |_____________________|
+#     ___   ______
+#    /   | / ____/ 
+#   / /| |/ /      By jonagamerpro1234
+#  / ___ / /___    Version 1.8.0
+# /_/  |_\____/    Thanks for using AdvancedChat <3
+#  
 #
 Commands:
   Example-Help:
