--- a/AdvancedChat/Bukkit/src/main/resources/groups.yml
+++ b/AdvancedChat/Bukkit/src/main/resources/groups.yml
@@ -1,7 +1,9 @@
-# |    AdvancedChat     |
-# | By jonagamerpro1234 |
-# |   Version 1.6.0     |
-# |_____________________|
+#     ___   ______
+#    /   | / ____/ 
+#   / /| |/ /      By jonagamerpro1234
+#  / ___ / /___    Version 1.7.0
+# /_/  |_\____/    Thanks for using AdvancedChat <3
+#  
 #
 # Here you can add new groups and configure them, but for this to work you need Vault or LuckPerms
 # The group name has to be the same as the range name or the group customization will not work
