--- a/AdvancedChat/Bukkit/src/main/resources/config.yml
+++ b/AdvancedChat/Bukkit/src/main/resources/config.yml
@@ -18,6 +18,9 @@ Settings:
   # |Config-Version| I would not change anything
   Config-Version: 2
   
+  # |Locale| here you can select the language of the messages that are available in the Messages folder
+  Locale: en
+  
   # |Debug| This option should only be used if there is a problem with certain functions of the plugin, debug messages will be activated in the console
   Debug: true
   
@@ -151,13 +154,13 @@ ChatFormat:
       Suggest-Command: '/msg <name>'  
 
   
-  # ||
+  # |Private-Message|
   Private-Message:
     
-    # || 
+    # |Send-Format| 
     Send-Format: ''
     
-    # ||
+    # |Receive-Format|
     Receive-Format: ''
   
   # |Debug-Format| It is a chat that will be activated when the configuration contains an error
@@ -283,7 +286,7 @@ Mention:
   # |Title|
   Title:
   
-    # |Enabled|
+    # |Enabled| Here you can enable or disable this feature
     Enabled: true
     
     # |Title|
@@ -323,47 +326,8 @@ Mention:
     # |Vol| This is the volume of the sound that you will hear when the chat mentions it
     Volume: 10
 #
-# |Translation of messages from AdvancedChat|
-# |Version: 1.7|
-#
-AdvancedChat:
-  Depend-Plugin: '&cCannot enable packet features!, Required plugin missing:'
-  Error-MySql: '&cCould not find the data, check the config &e[&bPath = Database&e]'
-  ClearChat-Server: '&7The chat has been cleaned'
-  ClearChat-Player: '&7The chat has been cleaned by &b[&e<name>&b]'
-  ClearChat-Staff: '&c{Staff} &7The chat has been cleaned by &b[&e<name>&b]'
-  No-Permission: '&cYou dont have permission to do that!'
-  No-Permission-Label: '&7Ask the server &b[&cowner&7 or an &eadministrator&b]&7 for help for more information'
-  Error-Args: '&cUnknown Arguments'
-  Error-Console: '&cThis command is only available to players'
-  Reload: '&aReload Completed'
-  Help-Mute: '&7Use &b/Mute &e<player> &7'
-  Help-UnMute: '&7Use &b/UnMute &e<player> &7'
-  Help-Use-Cmd: '&7Use &b/AdvanceChat &8| &9/Ac &6Help &7 show more information of plugin'
-  Help-Msg:
-    - '&5> &b/AdvancedChat &8| &9/Ac &7these are the variants of the main plugin command'
-    - '&5> &b/AdvancedChat &6help &7show this same message'
-    - '&5> &b/AdvancedChat &6reload &7reload the plugin files'
-    - '&5> &b/AdvancedChat &6info &7shows information about the plugin'
-    - '&5> &b/AdvancedChat &6color &7 open color gui'
-    - '&5> &b/AdvancedChat &6player &e<player name> open the player settings'
-    - '&5> &b/Mute &e<player name> &7mute the player'
-    - '&5> &b/UnMute &e<player name> &7demute the player'
-    - '&5> &b/ClearChat &8| &9/Cc &7clean the chat when it is very full or necessary'
-  Mute-Bypass: '&eThis player cannot be muted because he is bypassed.'
-  Mute-Player: '&e[&b<name>&e] &cis now muted!'
-  UnMute-Player: '&e[&b<name>&e] &ais now unmuted!'
-  Player-Is-Not-Mute: ''
-  Player-Is-Mute: ''
-  Alert-Mute: '&e[!] &cright now you are muted'
-  No-Online-Player: '&cThis player does not exist or is not connected!'
-  No-Use-Command: '&e[&b!&e] &cYou can t use that command! &b[&c<cmd>&b]'
-  No-Use-Command-Mute: '&e[&b!&e]You cannot use that command while it is muted! &b[&c<cmd>&b]'
-  Empty-Msg: '&c[!] &7write a message to send it'
-  Help-Msg-Use: '&7Use &b/Msg &6<player> &e<message> &7To send a private message to another player'
-#
 # This is the end of the configuration ... [-_-] more things coming soon
 # 
-# | Config File
-# | Version 1.7.0
+# ● Config File
+# ● Version 1.7.0
 #
