--- a/AdvancedChat/pom.xml
+++ b/AdvancedChat/pom.xml
@@ -69,9 +69,6 @@
  </dependencyManagement>
 	
 	<build>
-	
-		<defaultGoal>clean install</defaultGoal>
-	
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -111,6 +108,30 @@
 					<artifactId>maven-enforcer-plugin</artifactId>
 					<version>3.0.0-M3</version>
 				</plugin>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-antrun-plugin</artifactId>
+										<versionRange>[0.0,)</versionRange>
+										<goals>
+											<goal>run</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>				
 			</plugins>
 		</pluginManagement>
 		
