--- a/AdvancedChat/src/main/resources/badword.yml
+++ b/AdvancedChat/src/main/resources/badword.yml
@@ -4,10 +4,15 @@
 #  / ___ / /___    Version 1.7.0
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #  
+# ● Here you can set the words that are prohibited on your server and will be blocked 
+# ● by the chat filter for more information you can visit the AdvancedChat Wiki
+#
+# ● Wiki [Working Progress]: https://jonagamerpro1234.gitbook.io/advancedchat/
 #
 Blacklist:
   - 'noob'
-  - 'stupid'
-  - 'fuck'
   - 'n00b'
+  - 'stupid'
+  - 'stvp1d'
+  - 'fuck'
   - 'fvck'
