--- a/AdvancedChat/src/main/resources/custom-command.yml
+++ b/AdvancedChat/src/main/resources/custom-command.yml
@@ -1,7 +1,7 @@
 #     ___   ______
 #    /   | / ____/ 
 #   / /| |/ /      By jonagamerpro1234
-#  / ___ / /___    Version 1.8.0
+#  / ___ / /___    Version 1.8.0 - 1.9.0 
 # /_/  |_\____/    Thanks for using AdvancedChat <3
 #  
 #
