--- a/AdvancedChat/src/main/resources/messages.yml
+++ b/AdvancedChat/src/main/resources/messages.yml
@@ -29,8 +29,11 @@ AdvancedChat:
     - '&5> &b/AdvancedChat &6help &7show this same message'
     - '&5> &b/AdvancedChat &6reload &7reload the plugin files'
     - '&5> &b/AdvancedChat &6info &7shows information about the plugin'
-    - '&5> &b/AdvancedChat &6color &7 open color gui'
-    - '&5> &b/AdvancedChat &6player &e<player name> open the player settings'
+    - '&5> &b/AdvancedChat &6color &e<player name> &9set &a<color name> &7open color gui'
+    - '&5> &b/AdvancedChat &6player &e<player name>&7 open the player settings'
+    - '&5> &b/AdvancedChat &6gradient &e<player name> &9set &a<color name> &d<first|second> &7open the gradient gui'
+    - '&5> &b/Mgs &e<player name> &7send of private message '
+    - '&5> &b/AdvancedChat &6settings &e<option> &9<true|false|value> &7open the settings gui'
     - '&5> &b/Mute &e<player name> &7mute the player'
     - '&5> &b/UnMute &e<player name> &7demute the player'
     - '&5> &b/ClearChat &8| &9/Cc &7clean the chat when it is very full or necessary'
