--- a/AdvancedChat/pom.xml
+++ b/AdvancedChat/pom.xml
@@ -5,8 +5,8 @@
 
 	<groupId>jss.advancedchat</groupId>
 	<artifactId>advancedchat</artifactId>
-	<version>1.7.0-b15.3</version>
-	
+	<version>1.7.0-b15.4</version>
+
 	<name>AdvancedChat</name>
 	<description>a simple plugin that helps you customize your server chat to make it look better also brings a customizable chat system by group or rank and more....</description>
 	<url>https://github.com/jonagamerpro1234/AdvancedChat</url>
@@ -18,11 +18,11 @@
 	</properties>
 
 	<distributionManagement>
-	<repository>
-     <id>github</id>
-     <name>GitHub jonagamerpro1234 Apache Maven Packages</name>
-     <url>https://maven.pkg.github.com/jonagamerpro1234/advancedchat</url>
-   </repository>
+		<repository>
+			<id>github</id>
+			<name>GitHub jonagamerpro1234 Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/jonagamerpro1234/advancedchat</url>
+		</repository>
 	</distributionManagement>
 
 	<issueManagement>
@@ -149,6 +149,14 @@
 			<version>2.4.0</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- DiscordSRV -->
+		<dependency>
+			<groupId>com.discordsrv</groupId>
+			<artifactId>discordsrv</artifactId>
+			<version>1.24.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -163,6 +171,15 @@
 		<repository>
 			<id>dmulloy2-repo</id>
 			<url>https://repo.dmulloy2.net/repository/public/</url>
+		</repository>
+		<repository>
+			<id>dv8tion</id>
+			<name>m2-dv8tion</name>
+			<url>https://m2.dv8tion.net/releases</url>
+		</repository>
+		<repository>
+			<id>Scarsz-Nexus</id>
+			<url>https://nexus.scarsz.me/content/groups/public/</url>
 		</repository>
 		<repository>
 			<id>minecraft-repo</id>
